dev-versus/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/versus-frontend:IMAGEVERSION
        name: frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
