dev-versus/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 8080
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
