dev-versus/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: NAMESPACE
  name: ingress-versus
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: versus-dev-21d-ubuntu.exchangeweb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 3000
